<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group>
        <item
            android:id="@+id/speed_choice"
            android:title="@string/speed_ch"
            app:showAsAction="never">
            <menu>

                <item
                    android:id="@+id/speed_1"
                    android:checked="true"
                    android:title="@string/speed1"
                    app:showAsAction="never" />
                <item
                    android:id="@+id/speed_2"
                    android:checked="true"
                    android:title="@string/speed2"
                    app:showAsAction="never" />
                <item
                    android:id="@+id/speed_3"
                    android:checked="true"
                    android:title="@string/speed3"
                    app:showAsAction="never" />
            </menu>
        </item>
    </group>

    <group>
        <item
            android:id="@+id/dark_mode"
            android:checked="true"
            android:title="@string/dark_mode"
            app:showAsAction="never" />
        <item
            android:id="@+id/light_mode"
            android:checked="true"
            android:title="@string/light_mode"
            app:showAsAction="never" />
    </group>

</menu>
